added basic page routes

--- a/public/signup2.html
+++ b/public/signup2.html
@@ -5,7 +5,7 @@
      <script src="./signupblog.js"></script>
   </head>
   <body>
-    <link rel="stylesheet" href="sopd.css">
+    <link rel="stylesheet" href="./css/signup.css">
     <h1> SIGN UP </h1>
     <div class="userdetl">
        <label for "fullname">  </label>
