--- a/public/signup2.html
+++ b/public/signup2.html
@@ -5,13 +5,13 @@
      <script src="./signupblog.js"></script>
   </head>
   <body>
-    <link rel="stylesheet" href="sopd.css">
+    <link rel="stylesheet" href="C:\Users\LENOVO\OneDrive\Desktop\blog_web\public\css\signup.css">
     <h1> SIGN UP </h1>
     <div class="userdetl">
        <label for "fullname">  </label>
        <input type="text" placeholder="      Full name" name="fullname" id="signupname"  required>
        <label for "dob"></label>
-       <input type="date" placeholder="      DOB" name="dob" id="signupdob" class="db" required">
+       <input type="date" placeholder="DOB" name="dob" id="signupdob" class="db" required">
        <br>
        <br>
        <label for "username"> </label>
