signup interest functions added

--- a/public/signup2.html
+++ b/public/signup2.html
@@ -3,15 +3,34 @@
   <head>
     <title> SIGN UP </title>
      <script src="./signupblog.js"></script>
+     <script>
+       var interests = [];
+       function selectInterest(event) {
+         const srcText = event.srcElement.firstChild.data;
+         if (event.srcElement.id == "interests") return;
+
+         const classlist = event.srcElement.classList;
+         if(classlist.contains("checked")){
+           classlist.remove("checked");
+           interests = interests.filter(ele => ele !== srcText);
+         } else {
+           classlist.add("checked");
+           interests.push(srcText);
+         }
+         console.log(interests);
+         event.stopPropagation();
+       }
+     </script>
   </head>
   <body>
     <link rel="stylesheet" href="./css/signup.css">
     <h1> SIGN UP </h1>
+    <center>
     <div class="userdetl">
        <label for "fullname">  </label>
        <input type="text" placeholder="      Full name" name="fullname" id="signupname"  required>
-       <label for "dob"></label>
-       <input type="date" placeholder="      DOB" name="dob" id="signupdob" class="db" required">
+       <input type="date" placeholder="      DOB" name="dob" id="signupdob" class="db" required>
+       <label for "dob">DOB</label>
        <br>
        <br>
        <label for "username"> </label>
@@ -34,8 +53,11 @@
        <input type="text" placeholder="      Country" name="cntry" class="gb" id="signupcntry" required>
        <br>
    </div>
-   <h2>Field of Interest </h2> 
-   <div class="flexb">
+  </center>
+  <hr />
+   <h2>Field of Interest </h2>
+   <center> 
+   <div id="interests" class="flexb" onclick="selectInterest(event)">
      <div>Brands</div>
      <div>C</div>
      <div>C++</div>
@@ -57,9 +79,13 @@
      <div>Travel</div>
      <div>World News</div>
    </div> 
+  </center>
+  <hr />
+  <center>
    <div class="clibut">
-     <button type="button" class="cancelbutton" id="cancelbtn" name="cancelsignup" onClick="rdcancel()">Cancel</button>
-     <button type="button" class="signupbutton" id="signupbtn" name="signing_up" onClick="rdsignup()">Sign Up</button>
-  </div>   
+     <button type="button" class="cancelbutton button" id="cancelbtn" name="cancelsignup" onClick="rdcancel()">Cancel</button>
+     <button type="button" class="signupbutton button" id="signupbtn" name="signing_up" onClick="rdsignup()">Sign Up</button>
+  </div>  
+  </center> 
   </body>
 </html>
