--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./scripts/login.js"></script>
+    <style>
+      .ticked::before {
+        content: "";
+        background: url("icons/check.png") no-repeat;
+        width: 10px;
+        height: 10px;
+        float: left;
+        padding: 5px;
+        display: block;
+      }
+    </style>
     <title>BLOG PAGE</title>
   </head>
   <body>
@@ -14,13 +25,18 @@
     <section>
       <h2>Login</h2>
       <label for="email_inp">User name/Email</label>
-      <input type="email" id="email_inp" name="email"/>
-      <br>
+      <input type="email" id="email_inp" name="email" />
+      <br />
       <label for="password_inp">Password</label>
-      <input type="password" id="password_inp" name="password"/>
-      <br>
+      <input type="password" id="password_inp" name="password" />
+      <br />
       <button type="button" onclick="login()">Login</button>
     </section>
+    <div class="ticked">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero at
+      voluptates iste nisi et! Error, atque praesentium. In, facere ratione, qui
+      quidem repellat, molestias ipsum dolorem harum officiis dicta inventore.
+    </div>
     <footer>
       <p>This website is created as semester project.</p>
     </footer>
