--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Blog Login</title>
   </head>
   <body>
-    <div class="container text-center">
+    <div class="container text-center ">
         <h1>Blog Website</h1>
     </div>
     <div class="container text-center d-inline align-middle">
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group">
           <label>Password</label><br>
-          <input type="password" id="password_inp" class="from-control" name="password" placeholder="Password"/>
+          <input type="password" id="password_inp" class="from-control w-25" name="password" placeholder="Password"/>
         </div><br>
-        <button type="button" class="btn btn-primary" onclick="login()">Signin</button>
+        <button type="button" class="btn btn-primary" onclick="login()">Sign in</button>
         <p class="text-center text-muted">Or</p>
-        <button type="button" class="btn btn-primary" onclick="location.href=''">Signup</button>
+        <button type="button" class="btn btn-primary" onclick="location.href=''">Sign up</button>
       </form>
     </div>
     <div class="text-left text-light text-muted bg-dark fixed-bottom">
