--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
       <form action="">
         <div class="form-group">
           <label>User name/Email</label><br>
-          <input type="email" id="email_inp" class="from-control" name="email" placeholder="Email"/>
-        </div>
+          <input type="email" id="email_inp" class="from-control" style="width: 20%;" name="email" placeholder="Email"/>
+        </div><br>
         <div class="form-group">
           <label>Password</label><br>
-          <input type="password" id="password_inp" class="from-control w-25" name="password" placeholder="Password"/>
+          <input type="password" id="password_inp" class="from-control" style="width: 20%;" name="password" placeholder="Password"/>
         </div><br>
         <button type="button" class="btn btn-primary" onclick="login()">Sign in</button>
         <p class="text-center text-muted">Or</p>
