--- a/public/login.html
+++ b/public/login.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="loginstyle.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/loginstyle.css" />
+    <script src="scripts/loginScript.js"></script>
+  </head>
+  <body>
     <div class="center">
-        <h1">Blog Website</h1>
-        <h3>Sign In</h3>
-        <form method="post">
-            <div class="txt_field">
-                <input type="text" required>
-                <span></span>
-                <label>Email id</label>
-            </div>
-            <div class="txt_field">
-                <input type="text" required>
-                <span></span>
-                <label>Password</label>
-            </div>
-            <input type="submit" value="Sign In">
-            <!-- <div class="SignIn_link">
+      <h1>Blog Website</h1>
+      <h3>Sign In</h3>
+      <form>
+        <div class="txt_field">
+          <input type="text" name="email_id" id="email_id" required />
+          <span></span>
+          <label>Email id</label>
+        </div>
+        <div class="txt_field">
+          <input type="text" name="password" id="password" required />
+          <span></span>
+          <label>Password</label>
+        </div>
+        <button onclick="handleSubmit(event)">Sign In</button>
+        <!-- <div class="SignIn_link">
                 <a href="#"></a>
             </div> -->
-            <div class="SignUp_link">
-                Not a member? <a href="#">Signup</a>
-            </div>
-        </form>
+        <div class="SignUp_link">
+          Not a member? <a href="/sign_up">Signup</a>
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
