--- a/public/login.html
+++ b/public/login.html
@@ -12,12 +12,12 @@
       <h3>Sign In</h3>
       <form>
         <div class="txt_field">
-          <input type="text" name="email_id" id="email_id" required />
+          <input type="email" name="email_id" id="email_id" required />
           <span></span>
           <label>Email id</label>
         </div>
         <div class="txt_field">
-          <input type="text" name="password" id="password" required />
+          <input type="password" name="password" id="password" required />
           <span></span>
           <label>Password</label>
         </div>
