added route from home page. made login submit button clickable just once

--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
           <span></span>
           <label>Password</label>
         </div>
-        <button onclick="handleSubmit(event)">Sign In</button>
+        <button onclick="handleSubmit(event)" id="submit-btn">Sign In</button>
         <!-- <div class="SignIn_link">
                 <a href="#"></a>
             </div> -->
