--- a/public/login.html
+++ b/public/login.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8" />
     <title>Login Page</title>
     <link rel="stylesheet" href="./css/loginstyle.css" />
-    <script src="scripts/loginScript.js"></script>
+    <script src="scripts/loginScript_copy.js"></script>
   </head>
   <body>
     <div class="center">
       <h1>Blog Website</h1>
       <h3>Sign In</h3>
-      <form>
+      <form action="/database/sign_in" method="post">
         <div class="txt_field">
-          <input type="email" name="email_id" id="email_id" required />
+          <input type="email" name="email_id" id="email_id" value="teja@123" required />
           <span></span>
           <label>Email id</label>
         </div>
         <div class="txt_field">
-          <input type="password" name="password" id="password" required />
+          <input type="password" name="password" id="password" value="teja123" required />
           <span></span>
           <label>Password</label>
         </div>
-        <button onclick="handleSubmit(event)" id="submit-btn">Sign In</button>
-        <!-- <div class="SignIn_link">
-                <a href="#"></a>
-            </div> -->
-        <div class="SignUp_link">
-          Not a member? <a href="/sign_up">Signup</a>
+        <div>
+          <button id="submit-btn">Sign In</button>
         </div>
       </form>
+      <div class="SignUp_link">
+        Not a member? <a href="/sign_up">Signup</a>
+      </div>
     </div>
   </body>
 </html>
