added nav bar to all pages, resolved the issue where the database had too many connextions and server stops

--- a/public/login.html
+++ b/public/login.html
@@ -12,12 +12,12 @@
       <h3>Sign In</h3>
       <form action="/database/sign_in" method="post">
         <div class="txt_field">
-          <input type="email" name="email_id" id="email_id" value="teja@123" required />
+          <input type="email" name="email_id" id="email_id" required />
           <span></span>
           <label>Email id</label>
         </div>
         <div class="txt_field">
-          <input type="password" name="password" id="password" value="teja123" required />
+          <input type="password" name="password" id="password" required />
           <span></span>
           <label>Password</label>
         </div>
